Email Template Updated

--- a/email/xauman_email_2.html
+++ b/email/xauman_email_2.html
@@ -299,7 +299,7 @@
                                 <div style="
                                       color: #ffffff;
                                       direction: ltr;
-                                      font-family: Inter, sans-serif;
+                                      font-family: 'Playfair Display', serif;
                                       font-size: 16px;
                                       font-weight: 400;
                                       letter-spacing: 0px;
@@ -370,9 +370,9 @@
                                   ">
                                 <h1 style="
                                       margin: 0;
-                                      color: var(--text-color-blue);
+                                      color: #0064a2;
                                       direction: ltr;
-                                      font-family:var(--bs-title-font-family);
+                                      font-family: 'Alkatra', cursive;
                                       font-size: 32px;
                                       font-weight: 700;
                                       letter-spacing: normal;
@@ -432,8 +432,8 @@
                                 <div style="
                                       color: #201f42;
                                       direction: ltr;
-                                      font-family: Inter, sans-serif;
-                                      font-size: 18px;
+                                      font-family: 'Playfair Display', serif;
+                                      font-size: 1.2rem;
                                       font-weight: 400;
                                       letter-spacing: 0px;
                                       line-height: 180%;
@@ -645,9 +645,9 @@
                                   ">
                                 <h1 style="
                                       margin: 0;
-                                      color: var(--text-color-blue);
+                                      color: #0064a2;
                                       direction: ltr;
-                                      font-family:var(--bs-title-font-family);                                      
+                                      font-family:'Alkatra', cursive;                                      
                                       font-size: 38px;
                                       font-weight: 700;
                                       letter-spacing: normal;
@@ -672,8 +672,8 @@
                                 <div style="
                                       color: #201f42;
                                       direction: ltr;
-                                      font-family: Inter, sans-serif;
-                                      font-size: 18px;
+                                      font-family: 'Playfair Display', serif;
+                                      font-size: 1.2rem;
                                       font-weight: 400;
                                       letter-spacing: 0px;
                                       line-height: 180%;
@@ -815,7 +815,7 @@
                                         font-family: 'Noto Serif', Georgia,
                                           serif;
                                         mso-line-height-alt: 18px;
-                                        color: var(--text-color-blue);
+                                        color: #0064a2;
                                         line-height: 1.5;
                                       ">
                                     <p style="
@@ -839,7 +839,7 @@
                             <tr>
                               <td class="pad" style="
                                     vertical-align: middle;
-                                    color: var(--text-color-blue);
+                                    color: #0064a2;
                                     font-family: 'Noto Serif', Georgia, serif;
                                     font-size: 18px;
                                     letter-spacing: 0px;
@@ -884,8 +884,8 @@
                                           <td style="
                                                 font-family: 'Noto Serif',
                                                   Georgia, serif;
-                                                font-size: 18px;
-                                                color: var(--text-color-blue);
+                                                font-size: 1.2rem;
+                                                color: #0064a2;
                                                 vertical-align: middle;
                                                 letter-spacing: normal;
                                                 text-align: center;
@@ -911,14 +911,14 @@
                                 <div style="font-family: sans-serif">
                                   <div class style="
                                         font-size: 12px;
-                                        font-family: Inter, sans-serif;
+                                        font-family: 'Playfair Display', serif;
                                         mso-line-height-alt: 18px;
-                                        color: #515151;
+                                        color: black;
                                         line-height: 1.5;
                                       ">
                                     <p style="
                                           margin: 0;
-                                          font-size: 14px;
+                                          font-size: 1.1rem;
                                           text-align: center;
                                           mso-line-height-alt: 24px;
                                         ">
@@ -961,7 +961,7 @@
                                         font-family: 'Noto Serif', Georgia,
                                           serif;
                                         mso-line-height-alt: 18px;
-                                        color: var(--text-color-blue);
+                                        color: #0064a2;
                                         line-height: 1.5;
                                       ">
                                     <p style="
@@ -985,7 +985,7 @@
                             <tr>
                               <td class="pad" style="
                                     vertical-align: middle;
-                                    color: var(--text-color-blue);
+                                    color: #0064a2;
                                     font-family: 'Noto Serif', Georgia, serif;
                                     font-size: 18px;
                                     letter-spacing: 0px;
@@ -1031,8 +1031,8 @@
                                           <td style="
                                                 font-family: 'Noto Serif',
                                                   Georgia, serif;
-                                                font-size: 18px;
-                                                color: var(--text-color-blue);
+                                                font-size: 1.2rem;
+                                                color: #0064a2;
                                                 vertical-align: middle;
                                                 letter-spacing: normal;
                                                 text-align: center;
@@ -1058,14 +1058,14 @@
                                 <div style="font-family: sans-serif">
                                   <div class style="
                                         font-size: 12px;
-                                        font-family: Inter, sans-serif;
+                                        font-family: 'Playfair Display', serif;
                                         mso-line-height-alt: 18px;
-                                        color: #515151;
+                                        color: black;
                                         line-height: 1.5;
                                       ">
                                     <p style="
                                           margin: 0;
-                                          font-size: 14px;
+                                          font-size: 1.1rem;
                                           text-align: center;
                                           mso-line-height-alt: 24px;
                                         ">
@@ -1108,7 +1108,7 @@
                                         font-family: 'Noto Serif', Georgia,
                                           serif;
                                         mso-line-height-alt: 18px;
-                                        color: var(--text-color-blue);
+                                        color: #0064a2;
                                         line-height: 1.5;
                                       ">
                                     <p style="
@@ -1132,7 +1132,7 @@
                             <tr>
                               <td class="pad" style="
                                     vertical-align: middle;
-                                    color: var(--text-color-blue);
+                                    color: #0064a2;
                                     font-family: 'Noto Serif', Georgia, serif;
                                     font-size: 18px;
                                     letter-spacing: 0px;
@@ -1180,8 +1180,8 @@
                                           <td style="
                                                 font-family: 'Noto Serif',
                                                   Georgia, serif;
-                                                font-size: 18px;
-                                                color: var(--text-color-blue);
+                                                font-size: 1.2rem;
+                                                color: #0064a2;
                                                 vertical-align: middle;
                                                 letter-spacing: normal;
                                                 text-align: center;
@@ -1207,14 +1207,14 @@
                                 <div style="font-family: sans-serif">
                                   <div class style="
                                         font-size: 12px;
-                                        font-family: Inter, sans-serif;
+                                        font-family: 'Playfair Display', serif;
                                         mso-line-height-alt: 18px;
-                                        color: #515151;
+                                        color: black;
                                         line-height: 1.5;
                                       ">
                                     <p style="
                                           margin: 0;
-                                          font-size: 14px;
+                                          font-size: 1.1rem;
                                           text-align: center;
                                           mso-line-height-alt: 24px;
                                         ">
@@ -1453,9 +1453,9 @@
                                   ">
                                 <h1 style="
                                       margin: 0;
-                                      color: var(--text-color-blue);
+                                      color: #0064a2;
                                       direction: ltr;
-                                      font-family: var(--bs-title-font-family);
+                                      font-family: 'Alkatra', cursive;
                                       font-size: 30px;
                                       font-weight: 700;
                                       letter-spacing: normal;
@@ -1481,10 +1481,10 @@
                                     padding-top: 10px;
                                   ">
                                 <div style="
-                                      color: #515151;
+                                      color: black;
                                       direction: ltr;
-                                      font-family: Inter, sans-serif;
-                                      font-size: 18px;
+                                      font-family: 'Playfair Display', serif;
+                                      font-size: 1.2rem;
                                       font-weight: 400;
                                       letter-spacing: 0px;
                                       line-height: 180%;
@@ -1662,8 +1662,8 @@
                                 <div style="
                                       color: #ffffff;
                                       direction: ltr;
-                                      font-family: var(--bs-title-font-family);
-                                      font-size: 20px;
+                                      font-family: 'Alkatra', cursive;
+                                      font-size: 1.5rem;
                                       font-weight: 400;
                                       letter-spacing: 0px;
                                       line-height: 120%;
