--- a/email/xauman_email_2.html
+++ b/email/xauman_email_2.html
@@ -684,10 +684,12 @@
                                     The financial markets are big and have several areas ranging
                                     from stocks, bonds, foreign exchange, commodities, metals etc.
                                     We chose to put our focus on the Gold market, owing to its high
-                                    liquidity levels and price movement. We realized early on that
-                                    choosing one market and sticking to it is the key to understanding
-                                    what affects the market and how price moves and behaves based on
-                                    micro-economic and macro-economic data.
+                                    liquidity levels and price movement. <p>
+                                      We realized early on that
+                                      choosing one market and sticking to it is the key to understanding
+                                      what affects the market and how price moves and behaves based on
+                                      micro-economic and macro-economic data.
+                                    </p>
                                   </p>
 
                                   <p>Our expertise is centered around the behaviour of Gold. We will be
