--- a/email/xauman_email_2.html
+++ b/email/xauman_email_2.html
@@ -381,7 +381,7 @@
                                       margin-top: 0;
                                       margin-bottom: 0;
                                     ">
-																	<span class="tinyMce-placeholder">Welcome to
+																	<span class="tinyMce-placeholder">We are
 																		XAUman...seasoned Gold
 																		Traders</span>
 																</h1>
