Added database connectivity for testing

--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
               style="background-color: #000" placeholder="E-mail" value="" required />
           </div>
           <div class="col-md-12 justify-content-md-start mb-2 float-right">
-            <button type="submit" class="btn-submit btn btn-primary bg-dark" name="sub_button">
+            <button type="submit" class="btn-submit btn btn-primary bg-dark" name="sub_button" id="sub_button">
               Sign Up
             </button>
           </div>
