Added php sanitization and prepared statements

--- a/email/xauman_email.html
+++ b/email/xauman_email.html
@@ -512,7 +512,7 @@
 										cellspacing="0" role="presentation" style="
                         mso-table-lspace: 0pt;
                         mso-table-rspace: 0pt;
-                        background-image: url('https://xauman.com/src/img/Gold-01.jpg');
+                        background-image: url('https://xauman.com/src/img/Gold-04.jpg');
                         background-repeat: no-repeat;
                         background-size: cover;
                         background-color: #efeef4;
@@ -1286,7 +1286,7 @@
 										cellspacing="0" role="presentation" style="
                         mso-table-lspace: 0pt;
                         mso-table-rspace: 0pt;
-                        background-image: url('https://xauman.com/src/img/Gold-02.jpg');
+                        background-image: url('https://xauman.com/src/img/Forex-02.jpg');
                         background-repeat: no-repeat;
                         background-size: cover;
                         background-color: #ffffff;
