--- a/index.html
+++ b/index.html
@@ -240,6 +240,10 @@
             <button type="submit" class="btn-submit btn btn-primary bg-dark" name="sub_button" id="sub_button">
               Sign Up
             </button>
+            <button class="btn btn-primary bg-dark btn-loading" type="button" id="btn-loading" disabled>
+              <span class="spinner-grow spinner-grow-sm" role="status" aria-hidden="true"></span>
+              Loading...
+            </button>
           </div>
           <div class="col-message col-field col-sm-12">
             <div class="form-group">
@@ -278,7 +282,6 @@
 
   <!--Scripts to Review-->
   <script src="node_modules/bootstrap/dist/js/bootstrap.bundle.js"></script>
-  <script src="assets/js/script.js"></script>
 
   <script src="assets/js/jquery/jquery.min.js"></script>
   <script src="assets/js/jquery/bootstrap.min.js"></script>
