Added loading submit button

--- a/index.html
+++ b/index.html
@@ -237,7 +237,8 @@
               style="background-color: #000" placeholder="E-mail" value="" required />
           </div>
           <div class="col-md-12 justify-content-md-start mb-2 float-right">
-            <button type="submit" class="btn-submit btn btn-primary bg-dark" name="sub_button" id="sub_button">
+            <button type="submit" class="btn-submit btn btn-primary bg-dark" name="sub_button" id="sub_button"
+              disabled="true">
               Sign Up
             </button>
             <button class="btn btn-primary bg-dark btn-loading" type="button" id="btn-loading" disabled>
@@ -286,7 +287,7 @@
   <script src="assets/js/jquery/jquery.min.js"></script>
   <script src="assets/js/jquery/bootstrap.min.js"></script>
   <script src="assets/js/jquery/jquery.validate.min.js"></script>
-  <script src="assets/js/jquery/interface.js"></script>
+  <script src="assets/js/interface.js"></script>
 </body>
 
 </html>
