Button hover style updated

--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
             </button>
             <button class="btn btn-primary bg-dark btn-loading" type="button" id="btn-loading" disabled>
               <span class="spinner-grow spinner-grow-sm" role="status" aria-hidden="true"></span>
-              Loading...
+              Please Wait...
             </button>
           </div>
           <div class="col-message col-field col-sm-12">
